server/resources/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: mongo-database
  name: mongo-database
spec:
  ports:
    # The port that this service should serve on.
    - port: 27017
  # Label keys and values that must match in order to receive traffic for this service.
  selector:
    name: mongo-database
