server/resources/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: ocr
  name: ocr
spec:
  type: LoadBalancer
  ports:
    # The port that this service should serve on.
    - port: 80
      targetPort: 80
      protocol: TCP
  # Label keys and values that must match in order to receive traffic for this service.
  selector:
    name: ocr-server
